consistent quotation marks in TOML example

--- a/config.toml.example
+++ b/config.toml.example
@@ -10,6 +10,6 @@ owner = "haliphax#4859"
 proxies = 1
 
 	[webapp.flask]
-	SERVER_NAME = 'localhost:5000'
-	SERVER_HOST = '0.0.0.0'
+	SERVER_NAME = "localhost:5000"
+	SERVER_HOST = "0.0.0.0"
 	SERVER_PORT = 5000
