--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,12 @@ end_of_line = lf
 indent_size = 4
 indent_style = tab
 insert_final_newline = true
+tab_width = 4
 trim_trailing_whitespace = true
 
-[*.{py,yml}]
+[*.{md,py,yaml,yml}]
 indent_style = space
+
+[*.{md,yaml,yml}]
+indent_size = 2
+tab_width = 2
