--- a/config.example.toml
+++ b/config.example.toml
@@ -1,16 +1,15 @@
 [bot]
 data_folder = "data"
-extensions = [
-	"aethersprite.extensions.base._all",
-]
+extensions = ["aethersprite.extensions.base._all"]
 help_command = "aehelp"
 token = "SOMEREALLYLONGSTRINGTHATDISCORDGIVESYOU"
 owner = "haliphax#4859"
+prefix = "!"
 
 [webapp]
 proxies = 1
 
-	[webapp.flask]
-	SERVER_NAME = "localhost:5000"
-	SERVER_HOST = "0.0.0.0"
-	SERVER_PORT = 5000
+[webapp.flask]
+SERVER_NAME = "localhost:5000"
+SERVER_HOST = "0.0.0.0"
+SERVER_PORT = 5000
