--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,13 @@ dependencies = { file = "requirements/requirements.txt" }
 [tool.setuptools.dynamic.optional-dependencies]
 docs = { file = "requirements/docs.txt" }
 
+[tool.black]
+line-length = 80
+
+[tool.ruff]
+ignore = [
+	# ambiguous variable name
+	"E741",
+]
+line-length = 80
+target-version = "py311"
