--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -8,49 +8,75 @@ aiohttp==3.8.6
     # via discord-py
 aiosignal==1.3.1
     # via aiohttp
+annotated-types==0.6.0
+    # via pydantic
+anyio==3.7.1
+    # via
+    #   fastapi
+    #   starlette
+    #   watchfiles
 async-timeout==4.0.3
     # via aiohttp
 attrs==23.1.0
     # via aiohttp
-blinker==1.6.3
-    # via flask
 charset-normalizer==3.3.2
     # via aiohttp
 click==8.1.7
-    # via flask
+    # via uvicorn
 colorlog==6.7.0
     # via -r requirements.in
 discord-pretty-help==2.0.7
     # via -r requirements.in
 discord-py==2.3.2
     # via -r requirements.in
-flask==3.0.0
+fastapi==0.104.1
     # via -r requirements.in
 frozenlist==1.4.0
     # via
     #   aiohttp
     #   aiosignal
+h11==0.14.0
+    # via uvicorn
+httptools==0.6.1
+    # via uvicorn
 idna==3.4
-    # via yarl
-itsdangerous==2.1.2
-    # via flask
-jinja2==3.1.2
-    # via flask
-markupsafe==2.1.3
     # via
-    #   jinja2
-    #   werkzeug
+    #   anyio
+    #   yarl
 multidict==6.0.4
     # via
     #   aiohttp
     #   yarl
+pydantic==2.5.2
+    # via fastapi
+pydantic-core==2.14.5
+    # via pydantic
+python-dotenv==1.0.0
+    # via uvicorn
 pytz==2023.3.post1
     # via -r requirements.in
+pyyaml==6.0.1
+    # via uvicorn
+sniffio==1.3.0
+    # via anyio
 sqlitedict==2.1.0
     # via -r requirements.in
+starlette==0.27.0
+    # via fastapi
 toml==0.10.2
     # via -r requirements.in
-werkzeug==3.0.1
-    # via flask
+typing-extensions==4.8.0
+    # via
+    #   fastapi
+    #   pydantic
+    #   pydantic-core
+uvicorn[standard]==0.24.0.post1
+    # via -r requirements.in
+uvloop==0.19.0
+    # via uvicorn
+watchfiles==0.21.0
+    # via uvicorn
+websockets==12.0
+    # via uvicorn
 yarl==1.9.2
     # via aiohttp
