--- a/config.example.toml
+++ b/config.example.toml
@@ -7,9 +7,5 @@ owner = "haliphax#4859"
 prefix = "!"
 
 [webapp]
-proxies = 1
-
-[webapp.flask]
-SERVER_NAME = "localhost:5000"
-SERVER_HOST = "0.0.0.0"
-SERVER_PORT = 5000
+host = "0.0.0.0"
+port = 5000
