--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,29 +4,29 @@
 #
 #    pip-compile requirements.in
 #
-aiohttp==3.9.2
+aiohttp==3.9.3
     # via discord-py
 aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.6.0
     # via pydantic
-anyio==3.7.1
+anyio==4.3.0
     # via
     #   starlette
     #   watchfiles
-attrs==23.1.0
+attrs==23.2.0
     # via aiohttp
 click==8.1.7
     # via uvicorn
-colorlog==6.7.0
+colorlog==6.8.2
     # via -r requirements.in
 discord-pretty-help==2.0.7
     # via -r requirements.in
 discord-py==2.3.2
     # via -r requirements.in
-fastapi==0.109.1
+fastapi==0.109.2
     # via -r requirements.in
-frozenlist==1.4.0
+frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
@@ -34,21 +34,21 @@ h11==0.14.0
     # via uvicorn
 httptools==0.6.1
     # via uvicorn
-idna==3.4
+idna==3.6
     # via
     #   anyio
     #   yarl
-multidict==6.0.4
+multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
-pydantic==2.5.2
+pydantic==2.6.1
     # via fastapi
-pydantic-core==2.14.5
+pydantic-core==2.16.2
     # via pydantic
-python-dotenv==1.0.0
+python-dotenv==1.0.1
     # via uvicorn
-pytz==2023.3.post1
+pytz==2024.1
     # via -r requirements.in
 pyyaml==6.0.1
     # via uvicorn
@@ -56,16 +56,16 @@ sniffio==1.3.0
     # via anyio
 sqlitedict==2.1.0
     # via -r requirements.in
-starlette==0.35.1
+starlette==0.36.3
     # via fastapi
 toml==0.10.2
     # via -r requirements.in
-typing-extensions==4.8.0
+typing-extensions==4.9.0
     # via
     #   fastapi
     #   pydantic
     #   pydantic-core
-uvicorn[standard]==0.24.0.post1
+uvicorn[standard]==0.27.1
     # via -r requirements.in
 uvloop==0.19.0
     # via uvicorn
@@ -73,5 +73,5 @@ watchfiles==0.21.0
     # via uvicorn
 websockets==12.0
     # via uvicorn
-yarl==1.9.2
+yarl==1.9.4
     # via aiohttp
