--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -40,8 +40,8 @@ jobs:
 
   # formatting
 
-  black:
-    name: Black (formatter)
+  ruff-format:
+    name: Ruff (formatter)
     needs: changes
     if: needs.changes.outputs.py == 'true' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
@@ -59,8 +59,8 @@ jobs:
           python -m pip install -U pip setuptools
           pip install -e .[dev]
 
-      - name: Black
-        run: black -t py311 --check .
+      - name: Ruff
+        run: ruff format --check
 
   prettier:
     name: Prettier (formatter)
@@ -88,7 +88,7 @@ jobs:
 
   # linting
 
-  ruff:
+  ruff-lint:
     name: Ruff (linter)
     needs: changes
     if: needs.changes.outputs.py == 'true' || github.ref == 'refs/heads/main'
