--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,79 +6,39 @@
 #
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.12.14
+aiohttp==3.12.15
     # via discord-py
 aiosignal==1.4.0
     # via aiohttp
-annotated-types==0.6.0
-    # via pydantic
-anyio==4.3.0
-    # via
-    #   starlette
-    #   watchfiles
-attrs==23.2.0
+attrs==25.3.0
     # via aiohttp
-click==8.1.7
-    # via uvicorn
-colorlog==6.8.2
+colorlog==6.9.0
     # via -r requirements.in
 discord-pretty-help==2.0.7
     # via -r requirements.in
-discord-py==2.3.2
+discord-py==2.6.2
     # via -r requirements.in
-fastapi==0.110.0
-    # via -r requirements.in
-frozenlist==1.4.1
+frozenlist==1.7.0
     # via
     #   aiohttp
     #   aiosignal
-h11==0.16.0
-    # via uvicorn
-httptools==0.6.1
-    # via uvicorn
-idna==3.7
-    # via
-    #   anyio
-    #   yarl
-multidict==6.0.5
+idna==3.10
+    # via yarl
+multidict==6.6.4
     # via
     #   aiohttp
     #   yarl
-propcache==0.2.0
+propcache==0.3.2
     # via
     #   aiohttp
     #   yarl
-pydantic==2.6.4
-    # via fastapi
-pydantic-core==2.16.3
-    # via pydantic
-python-dotenv==1.0.1
-    # via uvicorn
-pytz==2024.1
+pytz==2025.2
     # via -r requirements.in
-pyyaml==6.0.1
-    # via uvicorn
-sniffio==1.3.1
-    # via anyio
 sqlitedict==2.1.0
     # via -r requirements.in
-starlette==0.36.3
-    # via fastapi
 toml==0.10.2
     # via -r requirements.in
-typing-extensions==4.10.0
-    # via
-    #   aiosignal
-    #   fastapi
-    #   pydantic
-    #   pydantic-core
-uvicorn[standard]==0.29.0
-    # via -r requirements.in
-uvloop==0.19.0
-    # via uvicorn
-watchfiles==0.21.0
-    # via uvicorn
-websockets==12.0
-    # via uvicorn
-yarl==1.17.2
+typing-extensions==4.15.0
+    # via aiosignal
+yarl==1.20.1
     # via aiohttp
