--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip setuptools
-          pip install -e .[dev]
+          pip install -e .[dev,web]
 
       - name: Ruff
         run: ruff format --check
@@ -105,7 +105,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip setuptools
-          pip install -e .[dev]
+          pip install -e .[dev,web]
 
       - name: Ruff
         run: ruff check --target-version py311 .
