--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip setuptools
-          pip install .[docs]
+          pip install .[docs,web]
 
       - name: Build docs
         run: |
